harbor/notary-traefik-ingress-tls.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: notary-ingress-tls
  namespace: harbor 
spec:
  entryPoints:
    - websecure 
  routes:
    - match: Host(`notary.wastedbits.org`)
      kind: Rule
      services:
        - name: harbor-harbor-notary-server
          port: 4443
  tls:
    certResolver: gandi
    domains:
      - main: "wastedbits.org"
        sans:
          - "*.wastedbits.org"
